# GJK-Symposion-Web

./: .gitignore  README.md
api_server/: .gitignore  CMakeLists.txt  api_server  sh_build.sh
api_server/src/: config.hpp  fetch.cpp  fetch.hpp  http.cpp  http.hpp  main.cpp  table.cpp  table.hpp  wserver.cpp  wserver.hpp
client/: Cargo.toml  config.json  index.html  main.css  mosty_text.txt  rustfmt.toml
client/html_layout/: harmonogram.html  kontakty.html  o_akci.html  uvod.html
client/src/: main.rs  router.rs  types.rs  utils.rs
client/src/components/: additional_lecture_info.rs  footer.rs  link_to.rs  mod.rs
client/src/html_layout/: harmonogram.html  kontakty.html  o_akci.html  uvod.html
client/src/pages/: chyba.rs  clear_storage.rs  harmonogram.rs  home.rs  kontakty.rs  mod.rs  not_found.rs  o_akci.rs
client/src/pages/components/: additional_lecture_info.rs  link_to.rs  mod.rs
harmonogram_automator/: connect_lecture_additional_info.gs  connect_lectures.gs  connect_times.gs  cut_table.gs  get_specials.gs  index.gs  pair_time_lecture.gs  pair_time_lecture_room.gs  parse_additional_info.gs  parse_table_data.gs
test_api/: index.js  package.json
